# synchromessotron

./: .firebaserc  .gitignore  DEVELOPMENT.md  LICENSE  README.md  build_all.sh  config.yaml.example  firebase.json  project-plan.md  project-requirements.md  pyproject.toml  set-tag.sh
.github/hooks/: log-prompts.json
.github/skills/common-development/: SKILL.md
.github/skills/development/common-development/: SKILL.md
.github/skills/development/libs-development/: SKILL.md
.github/skills/libs-development/: SKILL.md
.github/skills/post-task/: SKILL.md
.github/skills/telegram-cli-development/: .instructions.md  SKILL.md
.github/skills/telegram-cli-post-task/: .instructions.md  SKILL.md
.github/workflows/: ci.yml  quality-gate.yml  release.yml
docs/: tech-decisions.md
functions/: main.py
scripts/: log-user-prompt.sh
src/config/: schema.py
src/core/: interfaces.py  retry.py
src/messengers/telegram/: writer.py
src/messengers/vk/: reader.py  writer.py
telegram/telegram-cli/: DEVELOPMENT.md  README.md  pyproject.toml  release-notes.md  telegram-cli.spec
telegram/telegram-cli/docs/spec/: telegram-cli-requirements.md
telegram/telegram-cli/manuals/: AR_دليل_المستخدم.md  DE_Bedienungsanleitung.md  EN_User_Manual.md  FA_راهنمای_کاربر.md  RU_Руководство_Пользователя.md  TR_Kullanıcı_Kılavuzu.md
telegram/telegram-cli/src/: __init__.py  __main__.py  _lib.py  _pyz_entry.py  cli.py  config.py  errors.py  version.py  version.yaml
telegram/telegram-cli/src/commands/: __init__.py  backup.py  delete.py  download_media.py  edit.py  get_dialogs.py  help_cmd.py  init_cmd.py  ping.py  send.py  version_cmd.py  whoami.py
telegram/telegram-cli/src/help_texts/: __init__.py  en.json
telegram/telegram-cli/tests/post_build/: __init__.py  check_output_json.py  check_stdout.py  integration_test.py  result.py  run_integration_tests.py  run_post_build_test.py
telegram/telegram-cli/tests/post_build/macos_test/: README.md  macos_test.sh
telegram/telegram-cli/tests/post_build/windows_test/: README.md  windows_test.bat
telegram/telegram-cli/tests/unit/: test_backup.py  test_cli.py  test_commands.py  test_config.py  test_errors.py  test_init_cmd.py  test_timeout.py  test_version.py
telegram/telegram-cli/tools/: build_all_platform.sh  build_macos.sh  build_pyz.sh  build_windows.sh  set-tag.sh
telegram/telegram-lib/: README.md  pyproject.toml  release-notes.md
telegram/telegram-lib/docs/spec/: telegram-lib-requirements.md
telegram/telegram-lib/src/: __init__.py  client.py  dialogs.py  health.py  media.py  messages.py  models.py  version.py  version.yaml
telegram/telegram-lib/src/config/: loader.py
telegram/telegram-lib/src/core/: orchestrator.py
telegram/telegram-lib/src/messengers/telegram/: reader.py
telegram/telegram-lib/src/storage/: firestore.py
telegram/telegram-lib/telegram_lib/: __init__.py  _logging.py  client.py  dialogs.py  health.py  media.py  members.py  messages.py  version.py  version.yaml
telegram/telegram-lib/tests/integration/: test_firestore.py
telegram/telegram-lib/tests/unit/: test_client.py  test_dialogs.py  test_health.py  test_media.py  test_messages.py  test_orchestrator.py  test_telegram.py  test_tg_check.py  test_version.py
telegram/telegram-lib/tools/: generate_session.py  tg_check.py
telegram/telegram-macos/: README.md
telegram/telegram-web/: README.md
telegram/telegram-web-server/: README.md
telegram/telegram-windows/: README.md
tests/unit/: test_telegram.py
tools/: tg_check.py
vkontakte/: README.md
vkontakte/tests/unit/: test_vk.py
vkontakte/tools/: vk_auth.py
