[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "synchromessotron"
version = "0.1.0"
description = "Workspace for telegram-lib and telegram-cli projects."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "black>=24.3",
]

[tool.workspace.projects]
telegram-lib = { path = "telegram/telegram-lib/telegram_lib" }
telegram-cli = { path = "telegram/telegram-cli/src", depends-on = ["telegram-lib"] }

[tool.setuptools.packages.find]
where = ["."]
include = ["telegram"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["telegram_lib", "telegram_cli"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
