[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-cli"
version = "1.0.8"
description = "Command-line interface for Telegram."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "telegram-lib",
    "PyYAML>=6.0",
    "Telethon>=1.36",
]

[project.scripts]
telegram-cli = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"src" = ["version.yaml", "help_texts/*.json"]
"src.help_texts" = ["*.json"]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/unit"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
